PA_Education/TestMenifest/force-app/main/default/objects/RewardHoliday__c/RewardHoliday__c.object-meta.xml
<CustomObject>
    <description>대체휴가 발생 이력 관리용 Object</description>
    <label>대체휴가</label>
    <nameField>
        <displayFormat>RH-{000000}</displayFormat>
        <label>대체휴가 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>