PA_Education/TestMenifest/force-app/main/default/objects/RewardHoliday__c/fields/BenefitAccrualYn__c.field-meta.xml
<CustomField>
    <fullName>BenefitAccrualYn__c</fullName>
    <description>잔여휴가가 남은 대체휴가 중 수당발생날짜가 지났을 경우 수당발생 대상여부 체크</description>
    <formula>AND (TODAY() &gt;= DateOfBenefitAccrual__c ,   OccurHoliday__c != Use_Holiday__c )</formula>
    <inlineHelpText>잔여휴가가 남은 대체휴가 중 수당발생날짜가 지났을 경우 수당발생 대상여부 체크</inlineHelpText>
    <label>수당발생 대상여부</label>
    <type>Checkbox</type>
</CustomField>