PA_Education/TestMenifest/force-app/main/default/objects/RewardHoliday__c/fields/BenefitPaymentYn__c.field-meta.xml
<CustomField>
    <fullName>BenefitPaymentYn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>수당 지급 여부</label>
    <type>Checkbox</type>
</CustomField>