PA_Education/TestMenifest/force-app/main/default/objects/RewardHoliday__c/fields/DateOfBenefitAccrual__c.field-meta.xml
<CustomField>
    <fullName>DateOfBenefitAccrual__c</fullName>
    <formula>ADDMONTHS( WorkingDate__c ,3)</formula>
    <label>수당발생날짜</label>
    <type>Date</type>
</CustomField>