PA_Education/TestMenifest/force-app/main/default/objects/RewardHoliday__c/fields/HolidayWork__c.field-meta.xml
<CustomField>
    <fullName>HolidayWork__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>휴일근무</label>
    <referenceTo>HolidayWork__c</referenceTo>
    <relationshipLabel>대체휴가</relationshipLabel>
    <relationshipName>HolidayWork2</relationshipName>
    <type>Lookup</type>
</CustomField>