PA_Education/TestMenifest/force-app/main/default/objects/RewardHoliday__c/fields/OccurHoliday__c.field-meta.xml
<CustomField>
    <fullName>OccurHoliday__c</fullName>
    <formula>CASE(TEXT(WorkingTime__c), &quot;0.5일 (4시간)&quot;, 0.75, &quot;1일 (8시간)&quot;, 1.5, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>발생휴가</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>