PA_Education/TestMenifest/force-app/main/default/objects/RewardHoliday__c/fields/Paid_Holiday__c.field-meta.xml
<CustomField>
    <fullName>Paid_Holiday__c</fullName>
    <label>수당지급된 휴가</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>