PA_Education/TestMenifest/force-app/main/default/objects/RewardHoliday__c/fields/Remain_Holiday__c.field-meta.xml
<CustomField>
    <fullName>Remain_Holiday__c</fullName>
    <formula>OccurHoliday__c - Use_Holiday__c -  Paid_Holiday__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>잔여휴가</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>