PA_Education/TestMenifest/force-app/main/default/objects/RewardHoliday__c/fields/Use_Holiday__c.field-meta.xml
<CustomField>
    <fullName>Use_Holiday__c</fullName>
    <defaultValue>0</defaultValue>
    <label>사용휴가</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>