PA_Education/TestMenifest/force-app/main/default/objects/RewardHoliday__c/fields/WorkingDate__c.field-meta.xml
<CustomField>
    <fullName>WorkingDate__c</fullName>
    <label>근무일자</label>
    <required>true</required>
    <type>Date</type>
</CustomField>