PA_Education/TestMenifest/force-app/main/default/objects/RewardHoliday__c/fields/WorkingTime__c.field-meta.xml
<CustomField>
    <fullName>WorkingTime__c</fullName>
    <label>근무시간</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0.5일 (4시간)</fullName>
            </value>
            <value>
                <fullName>1일 (8시간)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>