PA_Education/TestMenifest/force-app/main/default/objects/RewardHoliday__c/fields/WorkUser__c.field-meta.xml
<CustomField>
    <fullName>WorkUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>휴일근무자</description>
    <label>휴일근무자</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HR_WorkUser</relationshipName>
    <type>Lookup</type>
</CustomField>