PA_Education/TestMenifest/force-app/main/default/objects/RewardHoliday__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>WorkUser__c</columns>
    <columns>WorkingDate__c</columns>
    <columns>WorkingTime__c</columns>
    <columns>OccurHoliday__c</columns>
    <columns>Use_Holiday__c</columns>
    <columns>Paid_Holiday__c</columns>
    <columns>Remain_Holiday__c</columns>
    <columns>Remark__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>